syntax = "proto3";
package example;

service ServiceRegistry {
    rpc RegServer (Request) returns (Response) {}
    rpc LogoutService (Request) returns (Response) {}
}

message Request {
    string addr = 1;
    string name = 2;
    string desc = 3;
}

message Response {
    bool error = 1;
    string msg = 2;
    int32 code = 3;
}